--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "shopify_frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "17.x"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
@@ -15,9 +18,9 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
-    "react": "^17.0.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^2.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.1",
     "react-fetch-hook": "^1.8.5",
     "react-scripts": "5.0.0",
     "react-use-localstorage": "^3.5.3",
@@ -28,6 +31,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +50,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "mini-css-extract-plugin": "2.4.5"
+  },
+  "resolutions": {
+    "mini-css-extract-plugin": "2.4.5"
   }
 }
