--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-fetch-hook": "^1.8.5",
     "react-scripts": "5.0.0",
     "react-use-localstorage": "^3.5.3",
+    "runtime-env-cra": "^0.2.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -31,7 +32,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
