--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-app-env build'",
+    "build": "react-scripts-env build'",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
